--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "jquery": "^3.6.0",
     "node-mandrill": "^1.0.1",
     "node-schedule": "file:node_modules/node-schedule",
