--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jquery": "^3.6.0",
+    "node-cron": "^3.0.2",
     "node-mandrill": "^1.0.1",
     "node-schedule": "file:node_modules/node-schedule",
-    "puppeteer": "^15.4.1"
+    "puppeteer": "^15.4.1",
+    "systeminformation": "^5.17.12"
   }
 }
